tests/snapshots/examples_fixtures/guide_type_system__01_typed_let_and_fn.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/01_typed_let_and_fn.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
