tests/snapshots/examples_fixtures/guide_type_system__02_annotations_vs_inference.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/02_annotations_vs_inference.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
