tests/snapshots/examples_fixtures/guide_type_system__04_with_io_and_with_time.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/04_with_io_and_with_time.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
