tests/snapshots/examples_fixtures/guide_type_system__05_perform_handle_basics.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/05_perform_handle_basics.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
