tests/snapshots/examples_fixtures/guide_type_system__06_hof_with_e_compose.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/06_hof_with_e_compose.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
