tests/snapshots/examples_fixtures/guide_type_system__07_module_public_factories.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/07_module_public_factories.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
