tests/snapshots/examples_fixtures/guide_type_system__08_strict_public_api_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/08_strict_public_api_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
