tests/snapshots/examples_fixtures/guide_type_system__09_strict_public_api_fail.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/09_strict_public_api_fail.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
