tests/snapshots/examples_fixtures/guide_type_system__10_adt_type_sugar_and_match_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/10_adt_type_sugar_and_match_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
