tests/snapshots/examples_fixtures/guide_type_system__12_real_pipeline_demo.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/guide_type_system/12_real_pipeline_demo.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
